Bug 1385092 - Null check for the sParserWrapper. r=alwu, a=lizzard

From the crash report and code logic, it is possible that the KillClearOnShutdown comes and the NS_XPCOM_SHUTDOWN_OBSERVER_ID never comes when getting obsercerService fail.
So add null check for the sParserWrapper and combine mShutdown to a new function.

MozReview-Commit-ID: Cj5ph2JrO7v