dom/html/TextTrackManager.h
@@ -153,6 +153,8 @@ private:
   void ReportTelemetryForTrack(TextTrack* aTextTrack) const;
   void ReportTelemetryForCue();
 
+  bool IsShutdown() const;
+
   // If there is at least one cue has been added to the cue list once, we would
   // report the usage of cue to Telemetry.
   bool mCueTelemetryReported;
